Fixed odd spacing on right of password text-box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ html {
     appearance: none;
     border: none;
     display: block;
-    width: 100%;
+    width: 39.8em;
     padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
